# cpp-envrionment-setup

./: README.md  build.bat  setup_cpp_project.bat  setup_cpp_project_test.bat
MysteryIsland/: CMakeLists.txt
MysteryIsland/src/: Character.cpp  Character.h  main.cpp  resource.rc
NumberGuessing/: setup_cpp_project.bat
NumberGuessing/src/: main.cpp
SCiPnet/: CMakeLists.txt  build.bat
SCiPnet/src/: main.cpp  resource.rc
Test/: CMakeLists.txt  build.bat
src/: main.cpp
